Search API 1.0, dev (xx/xx/xxxx):
---------------------------------
API changes:
- #1308638 by drunken monkey: Reduce size of stored index settings.
- #1291346 by drunken monkey: Expose SearchApiQuery::preExecute() and
  postExecute().
- #955088 by dereine, drunken monkey: Provide (additional) access functionality.
- #1064884 by drunken monkey: Added support for indexing non-entities.

Others:
- #1231512 by drunken monkey: Use real Relationships instead of level magic in
  Views integration.
- #1260768 by drunken monkey: Move "Search pages" into its own project.
- #1260812 by drunken monkey: Move "Database search" into its own project.
- #1287602 by drunken monkey: Fixed „Index items immediately“ to delay indexing
  on insert, too.
- #1319500 by drunken monkey: Remove items after unsuccessful loads.
- #1297958 by drunken monkey: Fixed wrong facet operator used for range facets.
- #1305736 by drunken monkey: Fixed notice for unset Views group operator.
- #1263214 by drunken monkey: Fixed indexing with „Index items immediately“
  indexes old entity state.
- #1228726 by drunken monkey, mh86: Increased size of 'options' fields in
  database.
- #1295144 by katbailey: Added alter hook for Facet API search keys.
- #1294828 by drunken monkey: Fixed accidental presence of good OOP coding
  standards in Views integration.
- #1291376 by drunken monkey: Expose
  SearchApiFacetapiAdapter::getCurrentSearch().
- #1198764 by morningtime, drunken monkey: Fixed handling of Views filter
  groups.
- #1286500 by drunken monkey: Fixed „Search IDs” setting for facets not saved.
- #1278780 by dereine, drunken monkey: Fixed status field requirement for node
  access.
- #1182614 by katbailey, cpliakas, drunken monkey, thegreat, das-peter: Added
  Facet API integration.
- #1278592 by das-peter: Fixed default view mode for non-entites or entities
  without view modes.
- #1251674 by Nick_vh: Fixed handling of empty fulltext keys in Views.