@@ -1,6 +1,7 @@
 Search API 1.0, dev (xx/xx/xxxx):
 ---------------------------------
 API changes:
+- #1260834 by drunken monkey: Added a way to define custom data types.
 - #1308638 by drunken monkey: Reduce size of stored index settings.
 - #1291346 by drunken monkey: Expose SearchApiQuery::preExecute() and
   postExecute().
